--- a/vignettes/CaseStudies/MOMENTUM2/Measurement_preparation.Rmd
+++ b/vignettes/CaseStudies/MOMENTUM2/Measurement_preparation.Rmd
@@ -7,7 +7,6 @@ editor_options:
 ```{R load packages}
 library(openxlsx)
 library(tidyverse)
-library(countrycode)
 ```
 
 # Leslie et al. (2017)
@@ -137,6 +136,7 @@ KWR_data <- bind_rows(KWR_location_concentrations_data, KWR_location_concentrati
   mutate(Scale = "Regional")
 ```
 
+# TNO LEON-T measurements tyre wear
 Read in and save data collected by TNO on NR and SBR particles. (Data in mass, not particles)
 
 ```{R}
@@ -155,6 +155,8 @@ LEONT_TWP_data <- prep_LEONT_data(abs_path_Measurements) |>
          min_diameter_um = 2,
          max_diameter_um = 1000)
 ```
+
+# Redondo-Hasselerharm et al., 2024
 
 Read in the data on soil microplastic concentrations (Redondo-Hasselerharm et al., 2024)
 
@@ -196,6 +198,14 @@ soil_concentrations<- soil_concentrations |>
          sampling_method = NA)
 ```
 
+# MoreMomentum
+To do: MoreMomentum data
+
+```{R}
+
+```
+
+# Save
 Save the data. #/m3 and weight concentrations on different tabs.
 
 ```{R Save data}
