more info links

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ The current version (SimpleBox v5.0) is the first implementation in R.
 The primary use of SimpleBox is to calculate the expected environmental fate of specific chemicals or particles, given a certain emission into the environment.
 Donald Mackay classified environmental fate models into four levels.
 SimpleBox is a level 3 and 4 model, meaning that SimpleBox can calculate concentrations for multiple environmental compartments (e.g. air, soil, water) and multiple scales (regional, continental, global) both at steady-state and dynamically, over time.
-More information can be found [here](vignettes/Development/QualityDocumentation.md "More info on SimpleBox").
+More information can be found [here](https://www.rivm.nl/SimpleBox "More info on SimpleBox") and in the [model quality and transparency document.](vignettes/Development/QualityDocumentation.md)
 
 # 2. Repository structure
 
